[package]
name = "ldk-sample"
version = "0.1.0"
authors = ["Valentine Wallace <vwallace@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning = { path = "../rust-lightning/lightning", features = ["max_level_trace","unsafe_revoked_tx_signing"] }
lightning-block-sync = { path = "../rust-lightning/lightning-block-sync", features = [ "rpc-client", "tokio" ] }
lightning-invoice = { path = "../rust-lightning/lightning-invoice" }
lightning-net-tokio = { path = "../rust-lightning/lightning-net-tokio" }
lightning-persister = { path = "../rust-lightning/lightning-persister" }
lightning-background-processor = { path = "../rust-lightning/lightning-background-processor", features = [ "futures" ] }
lightning-rapid-gossip-sync = { path = "../rust-lightning/lightning-rapid-gossip-sync" }

base64 = "0.13.0"
bitcoin = "0.30.2"
bitcoin-bech32 = "0.12"
bech32 = "0.8"
libc = "0.2"

chrono = { version = "0.4", default-features = false, features = ["clock"] }
rand = "0.4"
serde_json = { version = "1.0" }
tokio = { version = "1", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
